FIX: move scrollbar to left

--- a/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
+++ b/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     height: 300px;
+    width: 105%;
+    padding-right: 5%;
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -9,7 +11,6 @@
 .preferencesWrapper {
     display: block;
     flex-direction: column;
-    align-items: left;
     width: 100%;
 
     .choiceWrapper {
@@ -20,7 +21,7 @@
         position: relative;
 
         &:last-child {
-            margin-bottom: 1.8rem;
+            margin-bottom: 0rem;
         }
 
         &:hover {
